# sandbox-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  debug_mcp_routes.py  docker-compose.yml  install.sh  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  session_lifecycle_diagram.md
.trae/rules/: project_rules.md
docs/: network_restrictions.md
examples/: client_example.py
scripts/: __init__.py  run_performance_tests.py
src/: cli.py  main.py
src/api/: api.py
src/config/: config.py  logger_config.py  session_config.py
src/sandbox_mcp/: __init__.py  api.py  cli.py  config.py  kernel_manager.py  logger_config.py  main.py  mcp_server.py  models.py
src/schema/: models.py
src/services/: kernel_manager.py  kernel_session.py
src/utils/: file_utils.py  network_restriction.py  session_config.py
tests/: README.md  conftest.py  test_api.py  test_api_integration.py  test_kernel_manager.py  test_mcp_http.py  test_mcp_integration.py
tests/bruno/ai-sandbox/: bruno.json  sessions.bru
tests/bruno/ai-sandbox/environments/: local.bru
tests/e2e/: test_full_workflow.py
tests/fixtures/: __init__.py
tests/integration/: test_api_image.py  test_mcp_http.py
tests/performance/: README.md  conftest.py  locustfile.py  test_api_performance.py  test_kernel_manager_performance.py  test_memory_performance.py
tests/unit/: test_api.py  test_file_download_with_restrictions.py  test_file_utils.py  test_invalid_url_handling.py  test_kernel_manager.py  test_network_restriction.py  test_session_config.py
